--- a/src/main.css
+++ b/src/main.css
@@ -1,8 +1,12 @@
 *{
   font-family: 'Oswald', sans-serif !important;
 }
+body{
+  background: #EFEFEF !important;
+
+}
 .ant-layout {
-  background: #ffffff !important;
+  background: #EFEFEF !important;
 }
 .ant-space-item{
   line-height: normal !important;
