--- a/src/pages/Notfound/Notfound.scss
+++ b/src/pages/Notfound/Notfound.scss
@@ -3,12 +3,12 @@
   height: 100vh;
   display: flex;
   justify-content: flex-end;
-  background-color: #e2dbd2;
+  background-color: #feeddd;
   .notfound-children {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #e2dbd2;
+    background-color: #feeddd;
     .notfound-content {
       width: 70%;
       .title-oops {
